@@ -429,6 +429,16 @@
                         <argLine>-Xms32m -Xmx512m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xms32m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
                 <!-- sonar-maven-plugin -->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
